# operators

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  env.sh  xmake.lua
.github/workflows/: main.yaml
include/: data_type.h  device.h  export.h  handle.h  infini_operators.h  operators.h  status.h  tensor.h
include/handle/: handle_export.h
include/ops/add/: add.h
include/ops/attention/: attention.h
include/ops/avg_pool/: avg_pool.h
include/ops/causal_softmax/: causal_softmax.h
include/ops/conv/: conv.h
include/ops/expand/: expand.h
include/ops/gemm/: gemm.h
include/ops/global_avg_pool/: global_avg_pool.h
include/ops/matmul/: matmul.h
include/ops/max_pool/: max_pool.h
include/ops/mlp/: mlp.h
include/ops/pooling/: pooling.h
include/ops/random_sample/: random_sample.h
include/ops/rearrage/: rearrange.h
include/ops/rearrange/: rearrange.h
include/ops/reform/: reform.h
include/ops/relu/: relu.h
include/ops/rms_norm/: rms_norm.h
include/ops/rotary_embedding/: rotary_embedding.h
include/ops/swiglu/: swiglu.h
include/tensor/: tensor_descriptor.h
lib/include/: infini_operators.h
operatorspy/: __init__.py  data_layout.py  devices.py  liboperators.py  operators.py  utils.py
operatorspy/tests/: __init__.py  add.py  attention.py  avg_pool.py  causal_softmax.py  conv.py  expand.py  gemm.py  global_avg_pool.py  matmul.py  max_pool.py  mlp.py  pooling.py  random_sample.py  rearrange.py  reform.py  relu.py  rms_norm.py  rotary_embedding.py  swiglu.py  test_utils.py
src/: data_type.h  device.h  internal.h  main.c  main.cpp  operators.c  operators.h  optype.h  tensor.h  utils.c  utils.cc  utils.h
src/cpu/: cpu.cc  cpu.h  rms_norm.cc  rms_norm.h
src/devices/: handle.cc  pool.h
src/devices/ascend/: CMakeLists.txt  ascend_handle.cc  ascend_handle.h  common.cc  common.h  common_ascend.cc  common_ascend.h  tensor_aclnn.cc  tensor_aclnn.h  tensor_desc.cc  tensor_desc.h
src/devices/bang/: bang_handle.cc  bang_handle.h  (+3 more)
src/nv_gpu/: nv_gpu.cu  nv_gpu.cuh  rms_norm.cu  rms_norm.cuh
src/ops/: utils.h
src/tensor/: tensor_descriptor.cc
(+194 files in other folders)
